<resources>
    <string name="app_name">ImageSelect</string>

    <!-- 相册 -->
    <string name="photo_num">(%1$d)</string>
    <string name="photo_folder_select">选择相册</string>
    <string name="photo_select">选择照片</string>
    <string name="photo_ok">确定(%1$d)</string>
    <string name="photo_preview">预览</string>
    <string name="photo_no_select">您还没选择照片</string>
    <string name="photo_to_choose">选择</string>

    <string name="select_ok">确认</string>


    <string name="publish_select_photo_max">您最多只能选%1$d张图片</string>

    <string name="common_large_image_title">%1$d/%2$d</string>

</resources>
