<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

    <com.jarek.library.TitleView
        android:id="@+id/tv_large_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentLeft="true"
        app:title_name="@string/photo_preview"
        android:layout_alignParentTop="true"
        app:right_text="@string/select_ok"
        app:small_text_size="15sp"
        app:title_text_color="@android:color/white"
        app:left_image="@drawable/btn_back"
        android:background="@color/title_bg"
        />

    <RelativeLayout
        android:id="@+id/rl_check"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:visibility="visible"
        android:padding="7dp" >

        <TextView
            android:id="@+id/ctv_check"
            android:layout_width="@dimen/photo_select_preview"
            android:layout_height="@dimen/photo_select_preview"
            android:layout_centerVertical="true"
            android:layout_marginRight="1dp"
            android:layout_toLeftOf="@+id/tv_check"
            android:background="@drawable/photo_select_oval_selector"
            android:enabled="false"
            android:clickable="false"
            android:gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/photo_to_choose"
            android:textSize="16sp"
            android:clickable="false"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>